--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "concat-stream": "^1.4.6",
+    "request": "^2.45.0",
     "split": "^0.3.0",
     "through": "^2.3.6"
   },
