--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "concat-stream": "^1.4.6",
     "request": "^2.45.0",
     "split": "^0.3.0",
-    "through": "^2.3.6"
+    "through": "^2.3.6",
+    "websocket-stream": "^1.0.2"
   },
   "author": "Agustin Diaz",
   "license": "MIT",
