--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "duplexer": "^0.1.1",
     "request": "^2.45.0",
     "split": "^0.3.0",
+    "stream-combiner": "^0.2.1",
     "through": "^2.3.6",
     "trumpet": "^1.7.0",
     "websocket-stream": "^1.0.2"
