--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "request": "^2.45.0",
     "split": "^0.3.0",
     "stream-combiner": "^0.2.1",
+    "tar": "^1.0.1",
     "through": "^2.3.6",
     "trumpet": "^1.7.0",
     "websocket-stream": "^1.0.2"
